adapters/secret-network-cosmwasm/build_errors.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /data/Universal-Privacy-Engine/adapters/secret-network-cosmwasm/Cargo.toml
workspace: /data/Universal-Privacy-Engine/Cargo.toml
    Checking upe-secret-adapter v0.1.0 (/data/Universal-Privacy-Engine/adapters/secret-network-cosmwasm)
error[E0432]: unresolved imports `ark_bn254::Bn254`, `ark_bn254::Fr`
 --> adapters/secret-network-cosmwasm/src/lib.rs:8:17
  |
8 | use ark_bn254::{Bn254, Fr};
  |                 ^^^^^  ^^ no `Fr` in the root
  |                 |
  |                 no `Bn254` in the root

error[E0432]: unresolved import `ark_snark`
  --> adapters/secret-network-cosmwasm/src/lib.rs:11:5
   |
11 | use ark_snark::SNARK;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `ark_snark`
   |
   = help: if you wanted to use a crate named `ark_snark`, use `cargo add ark_snark` to add it to your `Cargo.toml`

warning: unused imports: `Deserialize` and `Serialize`
 --> adapters/secret-network-cosmwasm/src/lib.rs:5:13
  |
5 | use serde::{Serialize, Deserialize};
  |             ^^^^^^^^^  ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `schemars::JsonSchema`
 --> adapters/secret-network-cosmwasm/src/lib.rs:6:5
  |
6 | use schemars::JsonSchema;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ark_groth16::Groth16`
 --> adapters/secret-network-cosmwasm/src/lib.rs:9:5
  |
9 | use ark_groth16::Groth16;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ark_serialize::CanonicalDeserialize`
  --> adapters/secret-network-cosmwasm/src/lib.rs:10:5
   |
10 | use ark_serialize::CanonicalDeserialize;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Storage`
 --> adapters/secret-network-cosmwasm/src/lib.rs:2:90
  |
2 |     entry_point, Binary, Deps, DepsMut, Env, MessageInfo, Response, StdResult, StdError, Storage,
  |                                                                                          ^^^^^^^

warning: unused variable: `proof_bytes`
   --> adapters/secret-network-cosmwasm/src/lib.rs:135:20
    |
135 | fn verify_zk_proof(proof_bytes: &[u8], public_inputs: &[String]) -> StdResult<bool> {
    |                    ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_proof_bytes`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `public_inputs`
   --> adapters/secret-network-cosmwasm/src/lib.rs:135:40
    |
135 | fn verify_zk_proof(proof_bytes: &[u8], public_inputs: &[String]) -> StdResult<bool> {
    |                                        ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_public_inputs`

For more information about this error, try `rustc --explain E0432`.
warning: `upe-secret-adapter` (lib) generated 7 warnings
error: could not compile `upe-secret-adapter` (lib) due to 2 previous errors; 7 warnings emitted
